// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders children passed to it 1`] = `
<div>
  <button
    aria-label="modifier l'état du bouton Test uniquement"
    onClick={[Function]}
  >
    <Icon
      src={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "color": [Function],
            "size": [Function],
          },
          "render": [Function],
        }
      }
    />
  </button>
  <ul
    aria-hidden="true"
  >
    <span />
    <p />
    <div />
  </ul>
</div>
`;

exports[`it renders correctly without children 1`] = `
<div>
  <button
    aria-label="modifier l'état du bouton Test uniquement"
    onClick={[Function]}
  >
    <Icon
      src={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "color": [Function],
            "size": [Function],
          },
          "render": [Function],
        }
      }
    />
  </button>
  <ul
    aria-hidden="true"
  />
</div>
`;
